# holographic-brick-chain

./: .gitignore  .rustfmt.toml  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: rust.yml
apps/brick-cli/: Cargo.toml
apps/brick-cli/src/: main.rs
crates/brick-attest/: Cargo.toml
crates/brick-attest/src/: lib.rs
crates/brick-chain/: Cargo.toml
crates/brick-chain/src/: lib.rs
crates/brick-chain/tests/: proof.rs
crates/brick-codec/: Cargo.toml
crates/brick-codec/src/: lib.rs
crates/brick-core/: Cargo.toml
crates/brick-core/src/: lib.rs
crates/brick-core/tests/: ledger.rs
crates/brick-da/: Cargo.toml
crates/brick-da/src/: lib.rs
crates/brick-exec/: Cargo.toml
crates/brick-exec/src/: lib.rs
crates/brick-hash/: Cargo.toml
crates/brick-hash/src/: lib.rs
crates/brick-holo/: Cargo.toml
crates/brick-holo/src/: lib.rs
crates/brick-ids/: Cargo.toml
crates/brick-ids/src/: lib.rs
crates/brick-lanes/: Cargo.toml
crates/brick-lanes/src/: lib.rs
crates/brick-proof/: Cargo.toml
crates/brick-proof/src/: lib.rs
crates/brick-super/: Cargo.toml
crates/brick-super/src/: lib.rs
docs/: ARCHITECTURE.md  ATTESTATION.md  CANONICAL_BYTES.md  LIMITS.md  PROOFS.md
